--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre&display=swap');
+
+
 :root {
     --primary: #8a4af3;
+    --main-font: 'Averia Serif Libre', cursive;
 }
 
 body {
