--- a/src/components/Products/Product/Product.css
+++ b/src/components/Products/Product/Product.css
@@ -3,6 +3,7 @@
     /* padding: 1rem 0.6rem !important; */
     /* background-color: #4f6d82 !important; */
     border: 4px solid #4f6d82;
+    overflow-y: hidden !important;
 }
 
 .product-img {
